@@ -1,33 +1,13 @@
 package com.inkyi.common.util;
-import java.io.IOException;
-import java.io.UnsupportedEncodingException;
-import java.math.BigInteger;
-import java.security.InvalidKeyException;
-import java.security.MessageDigest;
-import java.security.NoSuchAlgorithmException;
 import java.security.SecureRandom;
+import java.util.Base64;
 
-import javax.crypto.BadPaddingException;
 import javax.crypto.Cipher;
-import javax.crypto.IllegalBlockSizeException;
 import javax.crypto.KeyGenerator;
-import javax.crypto.NoSuchPaddingException;
 import javax.crypto.spec.SecretKeySpec;
-
-import sun.misc.BASE64Decoder;
-import sun.misc.BASE64Encoder;
 
 public class AESUtil {
 	
-	/**
-	 * 将byte[]转为各种进制的字符串
-	 * @param bytes byte[]
-	 * @param radix 可以转换进制的范围，从Character.MIN_RADIX到Character.MAX_RADIX，超出范围后变为10进制
-	 * @return 转换后的字符串
-	 */
-	private static String binary(byte[] bytes, int radix){
-		return new BigInteger(1, bytes).toString(radix);// 这里的1代表正数
-	}
 	
 	/**
 	 * base 64 encode
@@ -36,7 +16,7 @@ public class AESUtil {
 	 */
 	private static String base64Encode(byte[] bytes){
 		//正则去除空格
-		return new BASE64Encoder().encode(bytes).replaceAll("[\\s*\t\n\r]", "");//去除回车换行
+		return new String(Base64.getEncoder().encodeToString(bytes)).replaceAll("[\\s*\t\n\r]","");//去除回车换行
 	}
 	
 	/**
@@ -47,50 +27,13 @@ public class AESUtil {
 	 */
 	private static byte[] base64Decode(String base64Code){
 		try {
-			return (base64Code==null) ? null : new BASE64Decoder().decodeBuffer(base64Code);
-		} catch (IOException e) {
+			return (base64Code==null) ? null : Base64.getDecoder().decode(base64Code);//   
+		} catch (Exception e) {
 			// TODO Auto-generated catch block
 			 throw new IllegalStateException("System doesn't support AESUtil.base64Decode");
 		}
 	}
 	
-	/**
-	 * 获取byte[]的md5值
-	 * @param bytes byte[]
-	 * @return md5
-	 * @throws Exception
-	 */
-	private static byte[] md5(byte[] bytes) {
-		MessageDigest md;
-		try {
-			md = MessageDigest.getInstance("MD5");
-		} catch (NoSuchAlgorithmException e) {
-			 throw new IllegalStateException("System doesn't support md5");
-		}
-		md.update(bytes);
-		
-		return md.digest();
-	}
-	
-	/**
-	 * 获取字符串md5值
-	 * @param msg 
-	 * @return md5
-	 * @throws Exception
-	 */
-	private static byte[] md5(String msg) {
-		return (msg==null) ? null : md5(msg.getBytes());
-	}
-	
-	/**
-	 * 结合base64实现md5加密
-	 * @param msg 待加密字符串
-	 * @return 获取md5后转为base64
-	 * @throws Exception
-	 */
-	private static String md5Encrypt(String msg){
-		return (msg==null) ? null : base64Encode(md5(msg));
-	}
 	
 	/**
 	 * AES加密
@@ -102,13 +45,16 @@ public class AESUtil {
 	private static byte[] aesEncryptToBytes(String content, String encryptKey) {
 		try {
 			KeyGenerator kgen = KeyGenerator.getInstance("AES");
-			kgen.init(128, new SecureRandom(encryptKey.getBytes()));
+			 SecureRandom secureRandom = SecureRandom.getInstance("SHA1PRNG" );  
+			 secureRandom.setSeed(encryptKey.getBytes()); 
+			kgen.init(128, secureRandom);
 
 			Cipher cipher = Cipher.getInstance("AES");
 			cipher.init(Cipher.ENCRYPT_MODE, new SecretKeySpec(kgen.generateKey().getEncoded(), "AES"));
 			
 			return cipher.doFinal(content.getBytes("utf-8"));
-		} catch (InvalidKeyException | NoSuchAlgorithmException | NoSuchPaddingException | IllegalBlockSizeException | BadPaddingException | UnsupportedEncodingException e) {
+		} catch (Exception e) {
+			e.printStackTrace();
 			 throw new IllegalStateException("System doesn't support AESUtil.aesEncryptToBytes");
 		}
 	}
@@ -135,12 +81,15 @@ public class AESUtil {
 		byte[] decryptBytes;
 		try {
 			KeyGenerator kgen = KeyGenerator.getInstance("AES");
-			kgen.init(128, new SecureRandom(decryptKey.getBytes()));
+			 SecureRandom secureRandom = SecureRandom.getInstance("SHA1PRNG" );  
+			 secureRandom.setSeed(decryptKey.getBytes());
+			kgen.init(128, secureRandom);
 			
 			Cipher cipher = Cipher.getInstance("AES");
 			cipher.init(Cipher.DECRYPT_MODE, new SecretKeySpec(kgen.generateKey().getEncoded(), "AES"));
 			decryptBytes = cipher.doFinal(encryptBytes);
-		} catch (InvalidKeyException | NoSuchAlgorithmException | NoSuchPaddingException | IllegalBlockSizeException | BadPaddingException e) {
+		} catch (Exception e) {
+			e.printStackTrace();
 			throw new IllegalStateException("System doesn't support AESUtil.aesDecryptByBytes");
 		}
 		
@@ -156,5 +105,8 @@ public class AESUtil {
 	 */
 	public static String aesDecrypt(String encryptStr, String decryptKey) {
 		return (encryptStr==null) ? null : aesDecryptByBytes(base64Decode(encryptStr), decryptKey);
+	}
+	
+	public static void main(String[] args) {
 	}
 }
